--- a/lib/algora_web/live/subtitle_live/show.html.heex
+++ b/lib/algora_web/live/subtitle_live/show.html.heex
@@ -1,28 +1,35 @@
-<.header>
-  Subtitle <%= @subtitle.id %>
-  <:subtitle>This is a subtitle record from your database.</:subtitle>
-  <:actions>
-    <.link patch={~p"/subtitles/#{@subtitle}/show/edit"} phx-click={JS.push_focus()}>
-      <.button>Edit subtitle</.button>
-    </.link>
-  </:actions>
-</.header>
+<div class="px-4 sm:px-6 lg:px-8">
+  <.header class="py-4 sm:py-6 lg:py-8">
+    Subtitle <%= @subtitle.id %>
+    <:subtitle>This is a subtitle record from your database.</:subtitle>
+    <:actions>
+      <.link patch={~p"/videos/578/subtitles/#{@subtitle}/show/edit"} phx-click={JS.push_focus()}>
+        <.button>Edit subtitle</.button>
+      </.link>
+    </:actions>
+  </.header>
 
-<.list>
-  <:item title="Body"><%= @subtitle.body %></:item>
-  <:item title="Start"><%= @subtitle.start %></:item>
-  <:item title="End"><%= @subtitle.end %></:item>
-</.list>
+  <.list>
+    <:item title="Body"><%= @subtitle.body %></:item>
+    <:item title="Start"><%= @subtitle.start %></:item>
+    <:item title="End"><%= @subtitle.end %></:item>
+  </.list>
 
-<.back navigate={~p"/subtitles"}>Back to subtitles</.back>
+  <.back navigate={~p"/videos/578/subtitles"}>Back to subtitles</.back>
 
-<.modal :if={@live_action == :edit} id="subtitle-modal" show on_cancel={JS.patch(~p"/subtitles/#{@subtitle}")}>
-  <.live_component
-    module={AlgoraWeb.SubtitleLive.FormComponent}
-    id={@subtitle.id}
-    title={@page_title}
-    action={@live_action}
-    subtitle={@subtitle}
-    patch={~p"/subtitles/#{@subtitle}"}
-  />
-</.modal>
+  <.modal
+    :if={@live_action == :edit}
+    id="subtitle-modal"
+    show
+    on_cancel={JS.patch(~p"/videos/578/subtitles/#{@subtitle}")}
+  >
+    <.live_component
+      module={AlgoraWeb.SubtitleLive.FormComponent}
+      id={@subtitle.id}
+      title={@page_title}
+      action={@live_action}
+      subtitle={@subtitle}
+      patch={~p"/videos/578/subtitles/#{@subtitle}"}
+    />
+  </.modal>
+</div>
