--- a/lib/algora_web/live/subtitle_live/index.html.heex
+++ b/lib/algora_web/live/subtitle_live/index.html.heex
@@ -43,6 +43,7 @@
     title={@page_title}
     action={@live_action}
     subtitle={@subtitle}
+    video={@video}
     patch={~p"/videos/439/subtitles"}
   />
 </.modal>
