--- a/lib/algora_web/components/layouts/root.html.heex
+++ b/lib/algora_web/components/layouts/root.html.heex
@@ -51,7 +51,7 @@
   <body>
     <div class="fixed left-0 top-0 z-0 h-full w-full bg-[radial-gradient(ellipse_at_top_left,_var(--tw-gradient-stops))] from-gray-800 via-gray-900 to-gray-950" />
     <div
-      class="fixed inset-x-0 -top-[12rem] -left-[30rem] z-0 flex transform justify-center overflow-hidden blur-3xl"
+      class="fixed inset-x-0 -top-[8rem] -left-[35rem] z-0 flex transform justify-center overflow-hidden blur-3xl"
       aria-hidden="true"
     >
       <div
@@ -60,20 +60,52 @@
       >
       </div>
     </div>
-    <div class="relative py-4 px-4 sm:px-6 lg:px-8">
-      <.header class="pb-4">
-        <.logo />
-        <:actions>
-          <.link
-            navigate="/auth/login"
-            class="flex rounded px-5 py-2.5 overflow-hidden group bg-purple-500 relative hover:bg-gradient-to-r hover:from-purple-500 hover:to-purple-400 text-white hover:ring-2 hover:ring-offset-2 hover:ring-purple-400 transition-all ease-out duration-300"
-          >
-            <span class="absolute right-0 w-8 h-32 -mt-12 transition-all duration-1000 transform translate-x-12 bg-white opacity-10 rotate-12 group-hover:-translate-x-40 ease">
-            </span>
-            <span class="relative font-semibold">Login</span>
-          </.link>
-        </:actions>
-      </.header>
+    <div class="relative mt-[4.5rem]">
+      <nav id="nav" phx-hook="Nav" class="fixed z-10 top-0 w-full transition-colors">
+        <header class="flex gap-4 items-center justify-between py-4 px-4">
+          <div class="flex items-center gap-4">
+            <button
+              type="button"
+              aria-expanded="false"
+              aria-controls="mobile-sidebar"
+              class="-ml-2 p-2 text-white focus:outline-none focus:bg-white/10 rounded-full"
+              phx-click={show_mobile_sidebar()}
+            >
+              <span class="sr-only">Open sidebar</span>
+              <Heroicons.bars_3 class="h-6 w-6" />
+            </button>
+            <.logo class="w-16 h-auto" />
+          </div>
+          <div class="font-medium text-gray-300 text-sm flex items-center gap-2">
+            <div>Built with</div>
+            <.link navigate="https://elixir-lang.org">
+              <img src={~p"/images/elixir.png"} alt="Elixir" class="shrink-0 mb-1 h-5 mx-auto" />
+            </.link>
+            <div>and</div>
+            <.link navigate="https://www.tigrisdata.com">
+              <img src={~p"/images/tigris.svg"} alt="Tigris" class="shrink-0 mt-2 h-4 mx-auto" />
+            </.link>
+          </div>
+
+          <%= if @current_user do %>
+            <.dropdown2 id="account-dropdown2">
+              <:img src={@current_user.avatar_url} alt={@current_user.handle} />
+              <:link navigate={channel_path(@current_user)}>Channel</:link>
+              <:link navigate={~p"/channel/settings"}>Settings</:link>
+              <:link href={~p"/auth/logout"} method={:delete}>Sign out</:link>
+            </.dropdown2>
+          <% else %>
+            <.link
+              navigate="/auth/login"
+              class="flex rounded px-4 py-2 overflow-hidden group bg-purple-500 relative hover:bg-gradient-to-r hover:from-purple-500 hover:to-purple-400 text-white hover:ring-2 hover:ring-offset-2 hover:ring-purple-400 transition-all ease-out duration-300"
+            >
+              <span class="absolute right-0 w-8 h-32 -mt-12 transition-all duration-1000 transform translate-x-12 bg-white opacity-10 rotate-12 group-hover:-translate-x-40 ease">
+              </span>
+              <span class="relative font-semibold text-sm">Login</span>
+            </.link>
+          <% end %>
+        </header>
+      </nav>
       <%= @inner_content %>
     </div>
   </body>
