--- a/lib/algora_web/components/layouts/root.html.heex
+++ b/lib/algora_web/components/layouts/root.html.heex
@@ -51,18 +51,18 @@
   <body>
     <div class="fixed left-0 top-0 z-0 h-full w-full bg-[radial-gradient(ellipse_at_top_left,_var(--tw-gradient-stops))] from-gray-800 via-gray-900 to-gray-950" />
     <div
-      class="fixed inset-x-0 -top-[8rem] -left-[35rem] z-0 flex transform justify-center overflow-hidden blur-3xl"
+      class="fixed inset-x-0 -top-[25%] -left-[6%] z-0 flex transform justify-center overflow-hidden blur-3xl"
       aria-hidden="true"
     >
       <div
-        class="aspect-[1318/752] w-[82.375rem] flex-none bg-gradient-to-r from-[#80caff] to-[#4f46e5] opacity-25"
+        class="w-screen h-[150vh] flex-none bg-gradient-to-r from-[#80caff] to-[#4f46e5] opacity-25"
         style="clip-path: polygon(73.6% 51.7%, 91.7% 11.8%, 100% 46.4%, 97.4% 82.2%, 92.5% 84.9%, 75.7% 64%, 55.3% 47.5%, 46.5% 49.4%, 45% 62.9%, 50.3% 87.2%, 21.3% 64.1%, 0.1% 100%, 5.4% 51.1%, 21.4% 63.9%, 58.9% 0.2%, 73.6% 51.7%)"
       >
       </div>
     </div>
-    <div class="relative mt-[4.5rem]">
+    <div class="relative mt-[64px]">
       <nav id="nav" phx-hook="Nav" class="fixed z-10 top-0 w-full transition-colors">
-        <header class="flex gap-4 items-center justify-between py-4 px-4">
+        <header class="flex gap-4 items-center justify-between h-[56px] px-4">
           <div class="flex items-center gap-4">
             <button
               type="button"
