--- a/lib/algora_web/components/layouts/live.html.heex
+++ b/lib/algora_web/components/layouts/live.html.heex
@@ -87,7 +87,7 @@
 <div class="flex flex-col w-0 flex-1 overflow-hidden">
   <!-- Search header -->
   <div
-    :if={@current_user}
+    :if={@current_user && false}
     class="relative z-10 flex-shrink-0 flex h-16 border-b border-gray-800 lg:hidden"
     role="navigation"
   >
