--- a/lib/algora_web/components/layouts/root.html.heex
+++ b/lib/algora_web/components/layouts/root.html.heex
@@ -51,7 +51,7 @@
   <body>
     <div class="fixed left-0 top-0 z-0 h-full w-full bg-[radial-gradient(ellipse_at_top_left,_var(--tw-gradient-stops))] from-gray-800 via-gray-900 to-gray-950" />
     <div
-      class="fixed inset-x-0 -top-[25%] -left-[3%] z-0 flex transform justify-center overflow-hidden blur-3xl"
+      class="fixed inset-x-0 -top-[25%] -left-[10%] z-0 flex transform justify-center overflow-hidden blur-3xl"
       aria-hidden="true"
     >
       <div
@@ -76,7 +76,7 @@
             </button>
             <.logo class="w-16 h-auto hidden sm:flex" />
           </div>
-          <div class="flex sm:pr-10 font-medium text-gray-300 text-sm items-center gap-1">
+          <div class="flex sm:pr-[6vw] font-medium text-gray-300 text-sm items-center gap-1">
             <div>Built with</div>
             <.link navigate="https://elixir-lang.org">
               <img src={~p"/images/elixir.png"} alt="Elixir" class="shrink-0 mb-1 h-5 mx-auto" />
