--- a/lib/algora_web/components/layouts/root.html.heex
+++ b/lib/algora_web/components/layouts/root.html.heex
@@ -92,12 +92,12 @@
 
         <%= if @current_user do %>
           <div class="shrink-0 hidden sm:block">
-            <.dropdown2 id="account-dropdown2">
+            <.simple_dropdown id="navbar-account-dropdown">
               <:img src={@current_user.avatar_url} alt={@current_user.handle} />
               <:link navigate={channel_path(@current_user)}>Channel</:link>
               <:link navigate={~p"/channel/settings"}>Settings</:link>
               <:link href={~p"/auth/logout"} method={:delete}>Sign out</:link>
-            </.dropdown2>
+            </.simple_dropdown>
           </div>
         <% else %>
           <.link
