fix external links

--- a/lib/algora_web/components/layouts/root.html.heex
+++ b/lib/algora_web/components/layouts/root.html.heex
@@ -81,13 +81,13 @@
         </div>
         <div class="flex sm:pr-[6vw] font-medium text-gray-300 text-sm items-center gap-1">
           <div>Built with</div>
-          <.link navigate="https://elixir-lang.org">
+          <a href="https://elixir-lang.org">
             <img src={~p"/images/elixir.png"} alt="Elixir" class="shrink-0 mb-1 h-5 mx-auto" />
-          </.link>
+          </a>
           <div>and</div>
-          <.link navigate="https://www.tigrisdata.com">
+          <a href="https://www.tigrisdata.com">
             <img src={~p"/images/tigris.svg"} alt="Tigris" class="shrink-0 mt-2 h-4 mx-auto" />
-          </.link>
+          </a>
         </div>
 
         <%= if @current_user do %>
