--- a/lib/algora_web/components/layouts/root.html.heex
+++ b/lib/algora_web/components/layouts/root.html.heex
@@ -73,10 +73,7 @@
       <div
         id="navbar"
         phx-hook="NavBar"
-        class={
-          # HACK: remove hidden
-          "hidden fixed z-30 top-0 w-full transition-colors gap-4 items-center justify-between h-[56px] px-4"
-        }
+        class="fixed z-30 top-0 w-full transition-colors gap-4 items-center justify-between h-[56px] px-4"
       >
         <div class="flex items-center gap-4">
           <button
