--- a/lib/algora_web/live/subtitle_live/index.html.heex
+++ b/lib/algora_web/live/subtitle_live/index.html.heex
@@ -1,4 +1,4 @@
-<.header class="p-4 sm:p-6 lg:p-8">
+<.header class="p-4">
   Subtitles
   <:actions>
     <.link patch={~p"/videos/#{@video.id}/subtitles/new"}>
